Uploaded image for project: 'Kudu'
  1. Kudu
  2. KUDU-3113

auto rebalancer doesn't successfully execute moves

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • None
    • 1.13.0
    • master
    • None

    Description

      I enabled the auto-rebalancer and saw the following warnings when letting it run on a cluster with a single empty tserver. I see the following in the logs.

      W0430 18:08:48.829325 170113 auto_rebalancer.cc:246] failed to send replica move request: Network error: unable to resolve address for deb718184b474c3db8dfe2d61133dfa1: Name or service not known 

      It seems like we're passing in a UUID when we should be passing a host: https://github.com/apache/kudu/blob/master/src/kudu/master/auto_rebalancer.cc#L431

      Given the feature is marked experimental, I don't think this is a release blocker, but we should probably remove it from the release notes for now.

      Attachments

        Activity

          People

            awong Andrew Wong
            awong Andrew Wong
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: